# synthetix-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/synthetix/: SKILL.md
examples/: README.md
examples/rest/: README.md  add-delegated-signer.py  batch-orders-tpsl.py  batch-orders-twap.py  batch-orders.py  cancel-all-orders.py  cancel-order-by-cloid.py  cancel-order.py  create-limit-gtc-order.py  create-limit-gtd-order.py  create-limit-gtd-post-only-order.py  create-limit-ioc-order.py  create-limit-post-only-order.py  create-market-order.py  create-subaccount.py  create-trigger-sl-order.py  create-trigger-tp-order.py  create-twap-order.py  fetch-balance-updates.py  fetch-balance.py  fetch-candles.py  fetch-delegated-signers.py  fetch-exchange-status.py  fetch-fee-rate.py  fetch-fees.py  fetch-funding-payments.py  fetch-funding-rate-history.py  fetch-funding-rate.py  fetch-markets.py  fetch-mids.py  fetch-my-trades.py  fetch-open-interest.py  fetch-open-orders.py  fetch-order-history.py  fetch-orderbook.py  fetch-performance-history.py  fetch-portfolio.py  fetch-position-history-filtered.py  fetch-position-history.py  fetch-positions.py  (+16 more)
examples/ws/: README.md  async-cancel-order-by-cloid.py  async-cancel-order.py  async-create-limit-gtd-order.py  async-create-limit-gtd-post-only-order.py  async-create-limit-post-only-order.py  async-create-order.py  async-create-twap-order.py  async-fetch-balance-updates.py  async-fetch-exchange-status.py  async-fetch-fee-rate.py  async-fetch-open-orders.py  async-fetch-positions.py  async-fetch-trades-for-position.py  async-fetch-withdrawable-amounts.py  async-market-order.py  async-schedule-cancel.py  async-update-subaccount-name.py  async-voluntary-collateral-exchange.py  async-watch-candles.py  async-watch-liquidations.py  async-watch-orderbook-diff.py  async-watch-orderbook-managed.py  async-watch-orderbook-snapshot.py  async-watch-positions.py  async-watch-ticker-on-error.py  async-watch-ticker.py  async-watch-trades.py
synthetix/: __init__.py  client.py  signing.py
synthetix/rest/: README.md  account.py  api.py  market.py
synthetix/utils/: constants.py  types.py  url.py
synthetix/ws/: README.md  manager.py  streams.py
